--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 {% block content %}
     <h1>🎛️ Music Tech Quiz</h1>
     <p>Test your knowledge of music production, audio gear, and sound design.</p>
-    <button onclick="location.href='{{ url_for('quiz') }}'">Start Quiz</button>
+       <div class="button-group">
+        <button onclick="location.href='{{ url_for('quiz') }}'">Start Quiz</button>
+        <button onclick="location.href='{{ url_for('leaderboard') }}'">View Leaderboard</button>
+    </div>
     <div class="footer">Powered by the Wobbly Walrus</div>
 {% endblock %}
 
