--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -8,15 +8,20 @@
 </head>
 <body>
 
-<div class="quiz-container">
-    <div id="score" class="score">Score: 0</div>
-    <div class="progress-container">
-  <div id="progress-bar" class="progress-bar"></div>
-</div>
+<div class="page-wrapper">
+    <div class="quiz-container">
+        <div id="question" class="question"></div>
+        <div class="progress-container">
+            <div id="progress-bar" class="progress-bar"></div>
+        </div>
+        <div id="options" class="options"></div>
+        <div id="score" class="score">Score: 0</div>
+        <div id="feedback" class="feedback"></div>
+    </div>
 
-    <div id="question" class="question"></div>
-    <div id="options" class="options"></div>
-    <div id="feedback" class="feedback"></div>
+    <div class="back-button">
+        <button onclick="location.href='{{ url_for('index') }}'">⬅ Back to Home</button>
+    </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/gameEngine.js') }}"></script>
